--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
     "server": "json-server --watch data/db.json"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.3.0",
     "json-server": "^1.0.0-beta.1",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
