--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
+    "date-fns": "^4.1.0",
     "json-server": "^1.0.0-beta.1",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
